--- a/source/sections/banner.scss
+++ b/source/sections/banner.scss
@@ -6,7 +6,7 @@
     }
 }
 
-[data-theme="breast-feeding"] {
+[data-theme="breast-care"] {
     .banner--text .banner-text h1 {
         -webkit-text-stroke-color: var(--pink);
     }
