--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -415,7 +415,7 @@ html {
 }
 
 html {
-    [data-theme="breast-feeding"] {
+    [data-theme="breast-care"] {
         background: var(--pink-light);
 
         .flickity-button path {
