--- a/source/sections/quick-view.scss
+++ b/source/sections/quick-view.scss
@@ -262,7 +262,7 @@ html .quickview {
             }
         }
     }
-    &[data-theme="breast-feeding"] {
+    &[data-theme="breast-care"] {
         .quickview-draw-actions,
         .quickview-draw-head p span,
         .quickview-draw-head button,
