--- a/snippets/mega.liquid
+++ b/snippets/mega.liquid
@@ -11,7 +11,7 @@
             V-DELIVERY
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.v-delivery.url }}"><b>V-Delivery</b></a>
+            <a class="" href="{{ collections.v-delivery.url }}"><b style="color:var(--orange);">V-Delivery</b></a>
           </h6>
           {% for product in collections['v-delivery'].products limit: 2 %}
             <p class="mega__wrap__column__sublink">
@@ -33,7 +33,7 @@
             C-Section
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.c-section-delivery.url }}"><b>C-Section Delivery</b></a>
+            <a class="" href="{{ collections.c-section-delivery.url }}"><b style="color:var(--orange);">C-Section Delivery</b></a>
           </h6>
           {% for product in collections['c-section-delivery'].products limit: 2 %}
             <p class="mega__wrap__column__sublink">
@@ -57,7 +57,7 @@
             Pregnancy
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.frontpage.url }}"><b>Pregnancy</b></a>
+            <a class="" href="{{ collections.frontpage.url }}"><b style="color:var(--green);">Pregnancy</b></a>
           </h6>
           {% for product in collections.frontpage.products limit: 2 %}
             <p class="mega__wrap__column__sublink">
@@ -77,7 +77,7 @@
             postpartum
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.postpartum.url }}"><b>Postpartum</b></a>
+            <a class="" href="{{ collections.postpartum.url }}"><b style="color:var(--orange);">Postpartum</b></a>
           </h6>
           {% for product in collections['postpartum'].products limit: 2 %}
             <p class="mega__wrap__column__sublink">
@@ -96,11 +96,11 @@
           </p>
 
           {% comment %}
-            breast-feeding
+            breast-care
           {% endcomment %}
           {% comment %}
             <h6 class="mega__wrap__column__link">
-              <a class="" href="{{ collections.breast-feeding.url }}"><b>breast-feeding</b></a>
+              <a class="" href="{{ collections.breast-care.url }}"><b>breast-care</b></a>
             </h6>
             <p class="mega__wrap__column__sublink">
               <a
@@ -112,7 +112,7 @@
                 Coming Soon
               </a>
             </p>
-            {% for product in collections['breast-feeding'].products limit: 2 %}
+            {% for product in collections['breast-care'].products limit: 2 %}
               <p class="mega__wrap__column__sublink">
                 <a
                   href="{{ product.url }}"
@@ -125,7 +125,7 @@
               </p>
             {% endfor %}
             <p class="mega__wrap__column__sublink">
-              <a href="{{ collections.breast-feeding.url }}">View more</a>
+              <a href="{{ collections.breast-care.url }}">View more</a>
             </p>
           {% endcomment %}
         </div>
