--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -94,8 +94,8 @@
         border-bottom: 1px solid var(--green);
         transition: all $fast;
 
-        @include media($md, max) {
-            width: 33.33333333%;
+        @include media(1280px, max) {
+            width: 20%;
             justify-content: center;
             align-items: flex-start;
             align-content: flex-start;
@@ -134,7 +134,7 @@
                 }
             }
 
-            @include media($md, max) {
+            @include media(1280px, max) {
                 width: 8rem;
                 height: 8rem;
                 margin-top: 2rem;
@@ -150,7 +150,7 @@
         &__title {
             width: calc(100% - 12rem);
 
-            @include media($md, max) {
+            @include media(1280px, max) {
                 width: 100%;
             }
 
@@ -167,7 +167,7 @@
                     min-width: max-content;
                 }
 
-                @include media($md, max) {
+                @include media(1280px, max) {
                     font-size: 1.4rem;
                     text-align: center;
                     min-width: 100%;
@@ -202,6 +202,29 @@
                 .collections__slider__item__quickview {
                     opacity: 1;
                     transform: translateX(0);
+                }
+            }
+
+            &--empty {
+                width: 100%;
+                padding: 4rem;
+                max-width: 60rem;
+                height: 100%;
+                display: flex;
+                color: white;
+                justify-content: center;
+                align-content: center;
+
+                .collections__slider__item__inner {
+                    background: var(--green);
+                    justify-content: center;
+                    align-content: center;
+                    width: 100%;
+                    height: 100%;
+
+                    h1 {
+                        text-align: center;
+                    }
                 }
             }
 
