--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -150,10 +150,10 @@
   <body
     data-page-type="{{ request.page_type }}"
     {%- if request.page_type == 'product' -%}
-      data-theme="{{ product.collections[0].title | downcase }}"
+      data-theme="{{ product.collections[0].title | downcase | replace: " ", "-"}}"
     {%- endif -%}
     {%- if request.page_type == 'collection' -%}
-      data-theme="{{ collection.title | downcase }}"
+      data-theme="{{ collection.title | downcase | replace: " ", "-" }}"
     {%- endif -%}
   >
     {{ content_for_header }}
