--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -166,7 +166,7 @@
           </div>
           <div class="mobile-navigation-menu__item">
             <a
-              href="{{ collections.frontpage.url }}"
+              href="{{ collections.pregnancy.url }}"
               data-id="Pregnancy"
               class="mobile-navigation-menu__item__link mobile-navigation-menu__item__link--small animate-white-to-green {% if link.active %}mobile-navigation-menu__item__link--current{% endif %}"
             >
