--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -1,4 +1,4 @@
-<div class="collection-grid">
+<div class="collection-grid-waves">
   <div class="collection-grid-wave1 [ js-wave ]">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
       <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
@@ -10,7 +10,9 @@
       <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="3" stroke="red" fill-opacity="0"/>
     </svg>
   </div>
+</div>
 
+<div class="collection-grid">
   {% comment %}
     Slider
   {% endcomment %}
@@ -33,7 +35,6 @@
             <div class="tooltip__wrap">Quick view</div>
           </div>
         </div>
-        
 
         <div class="collection-grid__list__item__images [ js-collection-grid-slider ]">
           {% for media in product.media %}
