--- a/snippets/mega.liquid
+++ b/snippets/mega.liquid
@@ -57,9 +57,9 @@
             Pregnancy
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.frontpage.url }}"><b style="color:var(--green);">Pregnancy</b></a>
+            <a class="" href="{{ collections.pregnancy.url }}"><b style="color:var(--green);">Pregnancy</b></a>
           </h6>
-          {% for product in collections.frontpage.products limit: 2 %}
+          {% for product in collections.pregnancy.products limit: 2 %}
             <p class="mega__wrap__column__sublink">
               <a
                 href="{{ product.url }}"
@@ -71,7 +71,7 @@
               </a>
             </p>
           {% endfor %}
-          <p class="mega__wrap__column__sublink"><a href="{{ collections.frontpage.url }}">View more</a></p>
+          <p class="mega__wrap__column__sublink"><a href="{{ collections.pregnancy.url }}">View more</a></p>
 
           {% comment %}
             postpartum
