--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -82,6 +82,8 @@
         overflow: auto;
         white-space: nowrap;
         padding: 0 2rem;
+        // -webkit-overflow-scrolling: touch; /* Enables smooth scrolling on iOS */
+        // scrollbar-width: thin; 
 
         * {
             user-select: none;
