--- a/snippets/announcement-bar.liquid
+++ b/snippets/announcement-bar.liquid
@@ -1,7 +1,7 @@
-<div class="announcement">
+{% comment %} <div class="announcement">
   <div class="announcement-text">
     <p class="no-margin center white small [ js-wave-text ]" data-text="Free express shipping on orders over $150">
       Free express shipping on orders over $150
     </p>
   </div>
-</div>
+</div> {% endcomment %}
